--- a/app/views/layouts/_side_navbar.html.erb
+++ b/app/views/layouts/_side_navbar.html.erb
@@ -1,8 +1,15 @@
 <div id="mySidenav" class="sidenav">
+    <form action="/searches" accept-charset="UTF-8" data-remote="true" method="post">
+        <div class="searching">
+            <input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="5nTEo1vvN0QQdTzROIY1y7rF6y0cgbAUVMPUjF4UhNMO09OlCpy0rNcKHoa3r2gRyZ/pLMzb4L5+YHmOcuulvA==">
+            <input type="text" name="title" class="search_bar" placeholder="Search...">
+            <input type="submit" class="search_button" value="Go">
+        </div>
+    </form>
     <% if user_signed_in? %>
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#" id="user" onclick="userNav()">My profil</a>
-    <div class="user">
+    <% if !current_user.is_admin %>
+    <a href="#" id="user" onclick="userNav()">Mon profile</a>
+    <div class="collapse user">
         <% if current_user.status == "Guest" %>
         <%= link_to "New Student", new_student_path %>
         <%= link_to "New Teacher", new_teacher_path %>
@@ -14,20 +21,20 @@
         <%= link_to 'Edit', edit_teacher_path(@teacher) %>
         <% end %>
     </div>
+    <% end %>
     <a href="#" id="establishment" onclick="estNav()">Establishments</a>
-    <div class="establishment">
+    <div class="collapse establishment">
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <a href="#">Search</a>
     </div>
     <a href="#" id="student" onclick="studentNav()">Students</a>
-    <div class="student">
+    <div class="collapse student">
         <a href="#">New</a>
         <a href="#">Show all</a>
-        <a href="#">Search</a>
     </div>
+    <% if !current_user.is_admin %>
     <a href="#" id="tst" onclick="tstNav()">My Tests</a>
-    <div class="tst">
+    <div class="collapse tst">
         <% if current_user.status == "Teacher"  %>
         <%= link_to "New", new_teacher_test_path(@teacher.id) %>
         <% if @teacher.tests.length != 0 %>
@@ -39,7 +46,6 @@
             <% end %>
         </ul>
         <% end %>
-        <a href="#">Search</a>
         <% elsif current_user.status == "Student" %>
         <% if Test.where(level: @student.level).length != 0 %>
         <ul>
@@ -55,8 +61,7 @@
         <% end %>
     </div>
     <a href="#" id="exam" onclick="examNav()">My exams</a>
-    <div class="exam collapse">
-        <a href="#">Search</a>
+    <div class="collapse exam">
         <% if Exam.all.length != 0 %>
         <ul>
             <% Exam.all.each do |exam| %>
@@ -72,10 +77,13 @@
         </ul>
         <% end %>
     </div>
+    <% end %>
     <a href="#" id="contact">Contact</a>
-    <a class="m-link" rel="nofollow" data-method="delete" href="/users/sign_out"><i class="fas fa-door-open"> Log Out</i></a>
+    <div class="log_out">
+        <a class="m-link" rel="nofollow" data-method="delete" href="/users/sign_out"><i class="fas fa-door-open"> Log Out</i></a>
+    </div>
     <% else %>
-    <a class="m-link" id='login-modal-launcher' data-toggle="modal" data-target="#login-modal"><i class="fas fa-sign-in-alt"> Login</i></a>
-    <a class="m-link" id='register-modal-launcher' data-toggle="modal" data-target="#register-modal"><i class="fas fa-user-plus"> Register</i></a>
+    <a class="m-link" id='login-modal-launcher' data-toggle="modal" data-target="#login-modal"><i class="fas fa-sign-in-alt"> Se connecter</i></a>
+    <!-- <a class="m-link" id='register-modal-launcher' data-toggle="modal" data-target="#register-modal"><i class="fas fa-user-plus"> Register</i></a> -->
     <% end %>
 </div>
