--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,13 @@
     <div id="main">
 
 
-    	<%= yield %>
-
-      <div id="search_result" class="search_result"> 
+      <div id="search_result" class="search_result collapse" style=""> 
       </div>
+
+      <div id="yield">
+    	  <%= yield %>
+      </div>
+
 
       <!-- <br><br><br><br><br><br>
       
