--- a/app/assets/stylesheets/side_navbar.css
+++ b/app/assets/stylesheets/side_navbar.css
@@ -1,7 +1,5 @@
 div#mySidenav {
-    text-align: center;
-    display: absolute;
-    z-index: 20;
+    text-align: left;
 }
 
 /* The side navigation menu */
@@ -79,9 +77,11 @@ div.tst {
 }
 
 .log_out{
-    background: 
+    border-top: 1px solid grey;
+    padding: 0 10%;
     position: absolute;
-    bottom: 0;
+    left: 3%;
+    bottom: 1%;
 }
 
 /*Search bar*/
